WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117203
[Qt][WK2] Fix layout testing with Qt 5.1
https://bugs.webkit.org/show_bug.cgi?id=117203
Summary
[Qt][WK2] Fix layout testing with Qt 5.1
Andras Becsi
Reported
2013-06-04 09:43:54 PDT
[Qt][WK2] Fix layout testing with Qt 5.1
Attachments
Patch
(3.23 KB, patch)
2013-06-04 09:46 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2013-06-04 09:46:34 PDT
Created
attachment 203705
[details]
Patch
Andras Becsi
Comment 2
2013-06-04 09:49:35 PDT
For reference the change that was forward-ported to QtQuick 2 is
https://bugreports.qt-project.org/browse/QTBUG-27723
. qtdeclarative: Change-Id: I4332dd72bb9d65167307c1ac5ce24e93b14cff5f
Andras Becsi
Comment 3
2013-06-05 04:08:02 PDT
Comment on
attachment 203705
[details]
Patch Clearing flags on attachment: 203705 Committed
r151208
: <
http://trac.webkit.org/changeset/151208
>
Andras Becsi
Comment 4
2013-06-05 04:08:08 PDT
All reviewed patches have been landed. Closing bug.
Andras Becsi
Comment 5
2013-06-05 04:48:20 PDT
***
Bug 114286
has been marked as a duplicate of this bug. ***
Andras Becsi
Comment 6
2013-06-05 04:51:08 PDT
***
Bug 114256
has been marked as a duplicate of this bug. ***
Andras Becsi
Comment 7
2013-06-05 06:08:57 PDT
***
Bug 114252
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug